====================

1.5.25 (unreleased)
-------------------

- Modified the default error message template to use the new helper for fetching
  objects in the default language, refs #5152 [jure]
- OSHMail no longer depends on external service, but uses local code for
  inline styling [thomasw]
- Custom breadcrumbs for ESENER #5828 [thomasw]
- Custom breadcrumbs for FOP section #6920 [thomasw]

1.5.24 (2013-03-07)
-------------------

- #6661 Link OSHmail portlet title to oshmail [deroiste]
- #5626 Style bullets in document fallback portlets [deroiste]

1.5.23 (2013-02-15)
-------------------

- Correctly align european flag on the front-page. Fixes #6529 [mlarreategi]
- governingboard: METALError: duplicate macro definition: 'person' [deroiste]

1.5.22 (2013-01-31)
-------------------

- Fix for the PDF (publication) download tracking: since we now use https,
  a hardcoded "http" substitution does not work any more; we need to consider
  https [thomasw]

1.5.21 (2013-01-11)
-------------------

- Catch solr exceptions in get_faqs to prevent errors on malformed queries. PEP8
  for oshahelpcenter. Refs #6344 [jure]
- quote SearchableText and subcategory, refs #6532 [reinhardt]


1.5.20 (2013-01-08)
-------------------

- Teaser headlines in OSHmails now link to the respective news item #6484 [thomasw]
- Added overflow-scrollbars to vocabulary tree-picker pop-ups #6338 [thomasw]

1.5.19 (2013-01-02)
-------------------

- #5899 Fix pressrelease_view for HWC2010 [deroiste]
- Remove the "links" link from the Napo website #6498 [thomasw]



1.5.18 (2012-12-19)
-------------------

- #6106 Bugfix alertservice: remove fixed width (in customised version of slc.alertservice) [deroiste]


1.5.17 (2012-12-18)
-------------------

- Update press release view: show fields 'contacts', 'relatedLinks',
  'notesToEditors' and remove fields 'releaseContacts', 'relatedItems' #6105
  [jcerjak]
- Minor osha.js.dtml and osha.css cleanup [jcerjak]