@@ -7,6 +7,9 @@
     <script type="text/javascript"
             src="++resource++osha.theme.behaviour/highlights-carousel.js"
             language="javascript"></script>
+    <script type="text/javascript"
+            src="++resource++osha.theme.behaviour/twitter-loader.js"
+            language="javascript"></script>
   </metal:javascript>
 
   <body>
